[gd_scene load_steps=6 format=3 uid="uid://5a8mj8ir3se8"]

[ext_resource type="Theme" uid="uid://cs33qvqc60ek3" path="res://theme.tres" id="1_j3vfp"]
[ext_resource type="Script" path="res://items_workshop/items_index/item_button.gd" id="2_j2ank"]
[ext_resource type="Texture2D" uid="uid://4rohljxk14aw" path="res://assets/images/slots/element_backgrounds/PHYSICAL.png" id="3_3388s"]
[ext_resource type="Texture2D" uid="uid://bij0adopl32p1" path="res://assets/images/slots/tier_borders/DIVINE.png" id="4_uu2q1"]
[ext_resource type="PackedScene" uid="uid://di4ho04jays15" path="res://common_scenes/display_item/display_item.tscn" id="5_hwfpq"]

[node name="ItemButton" type="Button"]
custom_minimum_size = Vector2(64, 64)
theme = ExtResource("1_j3vfp")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("2_j2ank")

[node name="ElementColor" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_3388s")
expand_mode = 1

[node name="DisplayItem" parent="." instance=ExtResource("5_hwfpq")]
unique_name_in_owner = true
layout_mode = 1
offset_left = 7.0
offset_top = 7.0
offset_right = -7.0
offset_bottom = -7.0

[node name="TierBorder" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_uu2q1")
expand_mode = 1
